--- a/manifest.json
+++ b/manifest.json
@@ -23,9 +23,10 @@
                 "https://www.roguard.net/db/monsters/*"
             ],
             "js": [
+                "baseLevelModifiers.js",
                 "contentScript.js"
             ]
         }
     ],
-    "manifest_version": 1
+    "manifest_version": 2
 }
